tests/snapshots/ecosystem_snapshots__embedded_fixtures__event_structs.snap
---
source: tests/ecosystem_snapshots.rs
expression: messages
---
[
    "modern_module_syntax: Use Move 2024 module label syntax: `module pkg::mod;`",
]
