tests/snapshots/ecosystem_snapshots__embedded_fixtures__modern_patterns.snap
---
source: tests/ecosystem_snapshots.rs
expression: messages
---
[
    "modern_module_syntax: Use Move 2024 module label syntax: `module pkg::mod;`",
    "error_const_naming: Error constant `E_NOT_FOUND` should use EPascalCase. Consider renaming to `ENotFound`.",
]
