tests/snapshots/ecosystem_snapshots__embedded_fixtures__two_step_transfer.snap
---
source: tests/ecosystem_snapshots.rs
expression: messages
---
[
    "modern_module_syntax: Use Move 2024 module label syntax: `module pkg::mod;`",
    "modern_method_syntax: Prefer method syntax: `ctx.sender(...)`",
    "modern_method_syntax: Prefer method syntax: `ctx.sender(...)`",
    "modern_method_syntax: Prefer method syntax: `ctx.sender(...)`",
    "public_mut_tx_context: TxContext parameters should use `&mut TxContext`",
    "public_mut_tx_context: TxContext parameters should use `&mut TxContext`",
    "typed_abort_code: Prefer named error constant over numeric abort code `1`",
    "typed_abort_code: Prefer named error constant over numeric abort code `2`",
]
